[package]
name = "iplookup"
version = "0.0.1"
authors = ["Nick Parker <nick@nickbp.com>"]
license = "GPL-3.0+"
edition = "2018"
readme = "README-CRATES.md"
description = "Queries a STUN server for your public IP"
repository = "https://github.com/nickbp/iplookup"

[dependencies]
bytecodec = "0.4"
rand = "0.7"
stun_codec = "0.1.12"
tokio = { version = "0.2.8", features = ["macros", "rt-core", "time", "udp"] }
